[package]
name = "iroh-dns-server"
version = "0.29.0"
edition = "2021"
description = "A pkarr relay and DNS server"
license = "MIT OR Apache-2.0"
authors = ["Frando <franz@n0.computer>", "n0 team"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["networking", "pkarr", "dns", "dns-server", "iroh"]
readme = "README.md"

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
base64-url = "3.0"
bytes = "1.7"
clap = { version = "4.5.1", features = ["derive"] }
derive_more = { version = "1.0.0", features = [
    "debug",
    "display",
    "into",
    "from",
] }
dirs-next = "2.0.0"
futures-lite = "2.5"
governor = "0.6.3" #needs new release of tower_governor for 0.7.0
hickory-server = { version = "=0.25.0-alpha.4", features = ["dns-over-rustls", "dns-over-https-rustls"] }
http = "1.0.0"
humantime-serde = "1.1.1"
iroh-metrics = { version = "0.29.0" }
lru = "0.12.3"
pkarr = { version = "2.2.0", features = [ "async", "relay", "dht"], default-features = false }
rcgen = "0.13"
redb = "2.0.0"
regex = "1.10.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = { version = "2.1" }
serde = { version = "1", features = ["derive"] }
struct_iterable = "0.1.1"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "ring",
] }
tokio-rustls-acme = { version = "0.6", features = ["axum"] }
tokio-stream = "0.1.14"
tokio-util = "0.7"
toml = "0.8.10"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3.18"
ttl_cache = "0.5.1"
url = "2.5"
z32 = "1.1.1"

[dev-dependencies]
criterion = "0.5.1"
hickory-resolver = "=0.25.0-alpha.4"
iroh = { version = "0.29.0", path = "../iroh" }
iroh-test = { version = "0.29.0", path = "../iroh-test" }
pkarr = { version = "2.2.0", features = ["rand"] }
testresult = "0.4.1"

[[bench]]
name = "write"
harness = false

[package.metadata.docs.rs]
all-features = true
