[package]
name = "iroh-dns-server"
version = "0.92.0"
edition = "2024"
description = "A pkarr relay and DNS server"
license = "MIT OR Apache-2.0"
authors = ["Frando <franz@n0.computer>", "n0 team"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["networking", "pkarr", "dns", "dns-server", "iroh"]
readme = "README.md"

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
base64-url = "3.0"
bytes = "1.7"
clap = { version = "4.5.1", features = ["derive"] }
derive_more = { version = "2.0.1", features = [
    "debug",
    "display",
    "into",
    "from",
] }
dirs-next = "2.0.0"
governor = "0.8"
hickory-server = { version = "0.25.1", features = ["https-ring"] }
http = "1.0.0"
humantime = "2.2.0"
humantime-serde = "1.1.1"
iroh-metrics = { version = "0.35", features = ["service"] }
lru = "0.13"
n0-future = "0.1.2"
n0-snafu = "0.2.2"
pkarr = { version = "5", features = ["relays", "dht"], default-features = false }
rcgen = "0.13"
redb = "2.6.3"
regex = "1.10.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = { version = "2.1" }
serde = { version = "1", features = ["derive"] }
struct_iterable = "0.1.1"
snafu = { version = "0.8.5", features = ["rust_1_81"] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "ring",
] }
tokio-rustls-acme = { version = "0.7.1", features = ["axum"] }
tokio-stream = "0.1.14"
tokio-util = "0.7"
toml = "0.9.2"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tower_governor = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.18"
ttl_cache = "0.5.1"
url = "2.5.3"
z32 = "1.1.1"

[dev-dependencies]
criterion = "0.5.1"
data-encoding = "2.3.3"
hickory-resolver = "0.25.0"
iroh = { path = "../iroh" }
rand = "0.9.2"
rand_chacha = "0.9"
tracing-test = "0.2.5"

[[bench]]
name = "write"
harness = false

[package.metadata.docs.rs]
all-features = true
