[package]
name = "iroh-dns"
version = "0.98.0"
edition = "2024"
description = "DNS-based endpoint discovery for iroh"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["networking", "pkarr", "dns", "iroh"]
rust-version = "1.89"

[lints]
workspace = true

[dependencies]
arc-swap = "1.9.1"
derive_more = { version = "2.0.1", features = ["debug"] }
iroh-base = { version = "0.98.0", path = "../iroh-base", default-features = false, features = ["key", "relay"] }
n0-error = "0.1.3"
n0-future = "0.3"
rand = "0.10"
reqwest = { version = "0.13", default-features = false }
rustls = { version = "0.23.33", default-features = false }
simple-dns = "0.9"
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
url = "2.5.3"

# non-wasm-in-browser dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
hickory-resolver = { version = "0.26.0", features = ["tokio", "system-config"] }

# Android-only dependency for the opt-in system DNS reader. The actual
# JNI work is done by `hickory-resolver`'s Android `system_conf` module
# (which uses `jni`); we just route handles into ndk-context.
[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"

[build-dependencies]
cfg_aliases = "0.2.1"

[features]
default = []
tls-ring = ["rustls/ring", "hickory-resolver/https-ring"]
tls-aws-lc-rs = ["rustls/aws-lc-rs", "hickory-resolver/https-aws-lc-rs"]

[dev-dependencies]
n0-tracing-test = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }

# Android-only dev deps. The test ctor calls `install_test_jni_context_stub`
# so unit tests can construct a `DnsResolver` without a JVM in scope.
[target.'cfg(target_os = "android")'.dev-dependencies]
ctor = "0.10"

[[test]]
name = "integration"
required-features = ["tls-ring"]
