[package]
name = "iroh-dns"
version = "1.0.3"
edition = "2024"
description = "DNS-based endpoint discovery for iroh"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["networking", "pkarr", "dns", "iroh"]
rust-version = "1.91"

[lints]
workspace = true

[dependencies]
arc-swap = "1.9.1"
derive_more = { version = "2.0.1", features = ["debug"] }
iroh-base = { version = "1.0.3", path = "../iroh-base", default-features = false, features = ["key", "relay"] }
n0-error = "1.0.0"
n0-future = "0.3"
portable-atomic = "1"
rand = "0.10"
simple-dns = "0.11"
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
url = "2.5.3"

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
n0-dns-resolver = { version = "0.1", git = "https://github.com/n0-computer/n0-dns-resolver", default-features = false, features = ["transport-tls", "transport-https"] }
rustls = { version = "0.23.33", default-features = false }

[build-dependencies]
cfg_aliases = "0.2.2"

[features]
default = []
tls-ring = ["rustls/ring", "n0-dns-resolver/tls-ring"]
tls-aws-lc-rs = ["rustls/aws-lc-rs", "n0-dns-resolver/tls-aws-lc-rs"]

[dev-dependencies]
n0-tracing-test = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }
tracing-subscriber = "0.3.23"
webpki-roots = "1.0.7"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "iroh_base::*",
    "n0_error::*",
    "rustls::*",
    "url::*",
    "futures_core::stream::Stream",
    # only type alias
    "futures_lite::future::Boxed",
]
