[package]
name = "iroh-embed"
version = "0.1.3"
edition = "2021"
authors = ["Floris Bruynooghe <flub@n0.computer>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Embedable iroh library"
rust-version = "1.65"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
futures = "0.3.21"
iroh-api = { version = "0.1.3", path = "../iroh-api" }
iroh-gateway = { version = "0.1.3", path = "../iroh-gateway" }
iroh-metrics = { version = "0.1.3", path = "../iroh-metrics" }
iroh-one = { version = "0.1.3", path = "../iroh-one" }
iroh-p2p = { version = "0.1.3", path = "../iroh-p2p" }
iroh-resolver = { version = "0.1.3", path = "../iroh-resolver" }
iroh-rpc-client = { version = "0.1.3", path = "../iroh-rpc-client" }
iroh-rpc-types = { version = "0.1.3", path = "../iroh-rpc-types" }
iroh-store = { version = "0.1.3", path = "../iroh-store" }
iroh-unixfs = { version = "0.1.3", path = "../iroh-unixfs" }
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
tokio = "1"

[dev-dependencies]
testdir = "0.7.0"
tokio-test = "0.4.2"
