[package]
name = "iroh_ffi"
version = "0.1.0"
edition = "2021"
publish = false
readme = "README.md"
description = "IPFS reimagined"
license = "MIT/Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh"

[lib]
name="iroh"
crate-type = ["staticlib", "cdylib"]

[features]
c-headers = ["safer-ffi/headers"]

[dependencies]
anyhow = "1.0.69"
blake3 = "1.3.3"
data-encoding = { version = "2.3.3" }
iroh = { path = "../iroh", default-features = false }
iroh-net = { path = "../iroh-net" }
libc = "0.2.141"
multibase = { version = "0.9.1"}
num_cpus = { version = "1.15.0", optional = true }
safer-ffi = { version = "0.0.10", features = ["proc_macros"] }
tempfile = "3.4"
tokio = "1.25.0"
tokio-util = { version = "0.7", features = ["io-util", "io"] }
