[package]
name = "iroh-ffi"
version = "0.1.0"
edition = "2021"
publish = false
readme = "README.md"
description = "Bytes. Distributed. In C."
license = "MIT/Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.66"

[lib]
name = "iroh"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = []
c-headers = ["safer-ffi/headers"]

[dependencies]
anyhow = "1.0.69"
blake3 = "1.3.3"
bytes = "1"
data-encoding = { version = "2.3.3" }
iroh = { path = "../iroh", default-features = false, features = ["mem-db", "iroh-collection"] }
iroh-io = { version = "0.2.1" }
iroh-net = { path = "../iroh-net" }
libc = "0.2.141"
multibase = { version = "0.9.1"}
num_cpus = { version = "1.15.0" }
quinn = "0.10"
range-collections = "0.4.0"
safer-ffi = { version = "0.1.0-rc1", features = ["proc_macros"] }
tempfile = "3.4"
tokio = "1.25.0"
tokio-util = { version = "0.7", features = ["io-util", "io"] }
uniffi = { version = "0.24.3", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.24.3", features = ["build"] }

