[package]
name = "iroh-gateway"
readme = "README.md"
description = "IPFS gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
async-stream.workspace = true
axum.workspace = true
bytes.workspace = true
cid.workspace = true
clap = { workspace = true, features = ["derive"] }
config.workspace = true
futures.workspace = true
git-version.workspace = true
handlebars.workspace = true
headers.workspace = true
hex-literal.workspace = true
hex.workspace = true
http-body.workspace = true
http-serde.workspace = true
http.workspace = true
hyper.workspace = true
iroh-car.workspace = true
iroh-metrics = { workspace = true, features = ["gateway"] }
iroh-resolver.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
iroh-unixfs.workspace = true
iroh-util.workspace = true
libp2p.workspace = true
mime.workspace = true
mime_classifier.workspace = true
mime_guess.workspace = true
names.workspace = true
once_cell.workspace = true
opentelemetry = { workspace = true, features = ["rt-tokio"] }
phf = { workspace = true, features = ["macros"] }
rand.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_qs.workspace = true
sha2.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "fs", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }
toml.workspace = true
tower = { workspace = true, features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { workspace = true, features = ["trace", "compression-full", "cors"] }
tower-layer.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
testdir.workspace = true

[dev-dependencies]
iroh-store.workspace = true
tempfile.workspace = true
