[package]
name = "iroh-gossip"
version = "0.24.0"
edition = "2021"
readme = "README.md"
description = "gossip messages over broadcast trees"
license = "MIT/Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.76"

[lints]
workspace = true

[dependencies]
anyhow = { version = "1" }
async-channel = { version = "2.3.1", optional = true }
blake3 = { package = "iroh-blake3", version = "1.4.5"}
bytes = { version = "1.7", features = ["serde"] }
derive_more = { version = "=1.0.0-beta.7", features = ["add", "debug", "deref", "display", "from", "try_into", "into"] }
ed25519-dalek = { version = "2.0.0", features = ["serde", "rand_core"] }
indexmap = "2.0"
iroh-base = { version = "0.24.0", path = "../iroh-base" }
iroh-metrics = { version = "0.24.0", path = "../iroh-metrics" }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
rand = { version = "0.8.5", features = ["std_rng"] }
rand_core = "0.6.4"
serde = { version = "1.0.164", features = ["derive"] }

# net dependencies (optional)
futures-lite = { version = "2.3", optional = true }
futures-concurrency = { version = "7.6.1", optional = true }
futures-util = { version = "0.3.30", optional = true }
iroh-net = { path = "../iroh-net", version = "0.24.0", optional = true, default-features = false }
tokio = { version = "1", optional = true, features = ["io-util", "sync", "rt", "macros", "net", "fs"] }
tokio-util = { version = "0.7.12", optional = true, features = ["codec", "rt"] }
tracing = "0.1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
iroh-net = { path = "../iroh-net", version = "0.24.0", default-features = false, features = ["test-utils"] }
iroh-test = { path = "../iroh-test" }
rand_chacha = "0.3.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4.0"

[features]
default = ["net"]
net = [
    "dep:futures-lite",
    "dep:iroh-net",
    "dep:tokio",
    "dep:tokio-util",
    "dep:async-channel",
    "dep:futures-util",
    "dep:futures-concurrency"
]

[[example]]
name = "chat"
required-features = ["net"]

[package.metadata.docs.rs]
all-features = true
