[package]
name = "iroh-gossipswarm"
version = "0.4.1"
edition = "2021"
readme = "README.md"
description = "gossip messages over broadcast trees"
license = "MIT/Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-sync"

[dependencies]
blake3 = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
data-encoding = "2.4.0"
derive_more = { version = "0.99.17", git = "https://github.com/JelteF/derive_more", features = ["debug", "display", "from", "try_into", "add"] }
ed25519-dalek = { version = "=2.0.0-rc.2", features = ["serde", "rand_core"] }
indexmap = "1.9.3"
rand = { version = "0.8.5", features = ["std_rng"] }
rand_core = "0.6.4"
serde = { version = "1.0.164", features = ["derive"] }
tracing = "0.1.37"
iroh-net = { path = "../iroh-net", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.17"

[features]
net = ["iroh-net"]
