[package]
name = "iroh-localops"
version = "0.1.3"
edition = "2021"
rust-version = "1.63"
authors = ["dignifiedquire <me@dignifiedquire.com>", "b5 <b5@n0.computer>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Iroh specific process management."

[dependencies]
anyhow = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.25", features = ["signal", "process"]}
