[package]
name = "iroh-localops"
authors = ["dignifiedquire <me@dignifiedquire.com>", "b5 <b5@n0.computer>"]
description = "Iroh specific process management."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["signal", "process"] }
