[package]
name = "iroh-memesync"
version = "0.2.0"
edition = "2021"
authors = ["Friedel Ziegelmayer <me@dignifiedquire.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Implementation of the memesync protocol"

[dependencies]
tokio = { version = "1", features = ["sync"] }
bytes = { version = "1.1", features = ["serde"] }
asynchronous-codec = "0.6.0"
cid = { version = "0.9", features = ["serde-codec"] }
futures = "0.3.21"
libp2p = { version = "0.50", default-features = false }
multihash = "0.17"
thiserror = "1.0.20"
ahash = "0.8"
tracing = "0.1.34"
num_enum = "0.5.7"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
async-trait = "0.1.59"
async-stream = "0.3.3"
unsigned-varint = { version = "0.7.0", features = ["asynchronous_codec"] }

[dev-dependencies]
criterion = "0.3.5"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
libp2p = { version = "0.50", features = ["yamux", "noise", "tcp", "tokio"], default-features = false }
tokio = { version = "1", features = ["macros", "net", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
rand = "0.8.5"
libipld = "0.15.0"

[[bench]]
name = "message"
harness = false

[features]
default = []
