[package]
name = "iroh-memesync"
version = "0.2.0"
edition = "2021"
authors = ["Friedel Ziegelmayer <me@dignifiedquire.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/iroh"
description = "Implementation of the memesync protocol"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
bytes = { workspace = true, features = ["serde"] }
asynchronous-codec.workspace = true
cid = { workspace = true, features = ["serde-codec"] }
futures.workspace = true
libp2p = { workspace = true, default-features = false }
multihash.workspace = true
thiserror.workspace = true
ahash.workspace = true
tracing.workspace = true
num_enum.workspace = true
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
async-stream.workspace = true
unsigned-varint = { workspace = true, features = ["asynchronous_codec"] }
iroh-util.workspace = true
cbor4ii = { workspace = true, features = ["serde1"] }
serde_bytes = { version = "0.11" }

[dev-dependencies]
criterion.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
libp2p = { workspace = true, features = ["yamux", "noise", "tcp", "tokio"], default-features = false }
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tokio-util = { workspace = true, features = ["compat"] }
rand.workspace = true
libipld.workspace = true

[features]
default = []
