[package]
name = "iroh-metrics"
version = "0.11.0"
edition = "2021"
readme = "README.md"
description = "metrics for iroh"
license = "MIT OR Apache-2.0"
authors = ["arqu <asmir@n0.computer>", "n0 team"]
repository = "https://github.com/n0-computer/iroh"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.72"

[lints]
workspace = true

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
erased_set = "0.7"
hyper = { version = "0.14.25", features = ["server", "client", "http1", "tcp"] }
once_cell = "1.17.0"
prometheus-client = { version = "0.22.0", optional = true }
reqwest = { version = "0.11.19", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
struct_iterable = "0.1"
time = { version = "0.3.21", features = ["serde-well-known"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "sync", "rt", "net", "fs", "macros", "time", "test-util"] }

[features]
default = ["metrics"]
metrics = ["prometheus-client"]
