[package]
name = "iroh-net-report"
version = "0.31.0"
edition = "2021"
readme = "README.md"
description = "detailed reporting on network conditions"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["networking"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.81"

[lints]
workspace = true

[dependencies]
anyhow = "1"
bytes = "1.7"
derive_more = { version = "1.0.0", features = ["display"] }
iroh-base = { version = "0.31.0", path = "../iroh-base", default-features = false, features = ["relay"] }
iroh-metrics = { version = "0.31", default-features = false }
iroh-relay = { version = "0.31", path = "../iroh-relay", default-features = false }
n0-future = "0.1.2"
quinn = { package = "iroh-quinn", version = "0.13.0", default-features = false }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
rustls = { version = "0.23", default-features = false }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync", "time", "macros"] }
tokio-util = { version = "0.7.12", default-features = false }
tracing = "0.1"
url = { version = "2.4" }

# non-wasm-in-browser dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
hickory-resolver = "=0.25.0-alpha.4"
netwatch = { version = "0.3" }
portmapper = { version = "0.3", default-features = false }
surge-ping = "0.8.0"
tokio = { version = "1", default-features = false, features = ["sync", "time", "macros", "rt"] }

[dev-dependencies]
futures-lite = "2.3"
iroh-relay = { path = "../iroh-relay", features = ["test-utils", "server"] }
iroh-test = { path = "../iroh-test" }
pretty_assertions = "1.4"
quinn = { package = "iroh-quinn", version = "0.12.0" }
testresult = "0.4.0"
tokio = { version = "1", default-features = false, features = ["test-util"] }

[build-dependencies]
cfg_aliases = { version = "0.2" }

[features]
default = ["metrics"]
metrics = ["iroh-metrics/metrics", "portmapper/metrics"]
stun-utils = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "iroh_docsrs"]
